# sentinel-change-explorer

./: .gitignore  CLAUDE-CODE-PROMPT.md  CLAUDE.md  FEEDBACK.md  PRIORITIZED_BACKLOG.md  README.md  SPEC-phase1-sentinel-change-explorer.md  app.py  pyproject.toml  requirements-dev.txt  requirements.txt
.claude/: settings.local.json
.claude/hooks/: guard.sh
.streamlit/: config.toml
cache/overture/: building_230c2955075fb118cf65d4ad18d6ed1c.parquet  building_29045d0bd7695a1f91232e8b93a51574.parquet  building_76c8afed228b1ce3955ecc5a273ff655.parquet  building_bc9f1652d72e42d4ce611d59d12cccfc.parquet  place_19a41c511db1a95f637ccdfbad44af1a.parquet  place_6d9217f7eb221ce5ad56d59d17da3943.parquet  place_825795548d8e871de253254883e564c4.parquet  place_ca295693dba060629e222a05680f3577.parquet  place_f53cd756b2e07071b3219551394c06fd.parquet  segment_21868dec6839e4d56ceb2294c351f1a2.parquet  segment_3df36ac99d681df2e855f18a9e3a1eb8.parquet  segment_619a3e9658707f6797d4ed8ba3773bd4.parquet  segment_93ef68cd5948f4eeee2c98a6befdd804.parquet  segment_d5d947b474d7394f677bed2df72d55d2.parquet
config/: presets.json
docs/: SLOW_TESTS.md  VISUAL_E2E_TEST_PROCEDURE.md
src/: export.py  indices.py  masking.py  normalization.py  overture.py  sentinel.py  timeseries.py  visualization.py
src/experimental/: README.md  __init__.py  build_dataset.py  dataset_card_template.md  encoders.py  inference.py  lightning_train.sh  model_card_template.md  train_lejepa.py  upload_model.py
tests/: conftest.py  e2e_visual_test.py  test_indices.py  test_masking.py  test_normalization.py  test_overture_smoke.py  test_presets_e2e.py  test_sentinel_smoke.py  test_visualization.py  test_warmup.py
tests/integration/: test_overture.py  test_presets_e2e.py  test_reprojection.py  test_sentinel.py
tests/perf/: test_benchmarks.py
(+30 files in other folders)
