[project]
name = "sentinel-change-explorer"
version = "0.1.0"
description = "Streamlit app for visual Sentinel-2 change detection with Overture Maps context."
requires-python = ">=3.10"
dependencies = [
    "streamlit>=1.32.0",
    "pystac-client>=0.7.6",
    "rasterio>=1.3.9",
    "geopandas>=0.14.3",
    "folium>=0.16.0",
    "streamlit-folium>=0.20.0",
    "numpy>=1.26.4",
    "matplotlib>=3.8.3",
    "Pillow>=10.2.0",
    "overturemaps>=0.7.0",
    "pyarrow>=15.0.0",
    "shapely>=2.0.3",
]

[dependency-groups]
dev = [
    "pytest>=8.1.0",
]

[tool.pytest.ini_options]
markers = [
    "network: tests that require internet access (S3, STAC API)",
]
