[project]
name = "sentinel-change-explorer"
version = "0.1.0"
description = "Streamlit app for visual Sentinel-2 change detection with Overture Maps context."
requires-python = ">=3.10"
dependencies = [
    "streamlit>=1.32.0",
    "pystac-client>=0.7.6",
    "rasterio>=1.3.9",
    "geopandas>=0.14.3",
    "folium>=0.16.0",
    "streamlit-folium>=0.20.0",
    "numpy>=1.26.4",
    "matplotlib>=3.8.3",
    "Pillow>=10.2.0",
    "overturemaps>=0.7.0",
    "pyarrow>=15.0.0",
    "shapely>=2.0.3",
    "watchdog>=6.0.0",
    "huggingface-hub[cli]>=1.9.0",
]

[project.optional-dependencies]
# Experimental LeJEPA foundation-model feature (see src/experimental/README.md).
# Kept out of base deps so a plain `uv sync` stays lean for the Streamlit app.
# Install with: uv sync --extra experimental
experimental = [
    "torch>=2.2",
    "datasets>=2.19",
    "timm>=1.0",
]

[dependency-groups]
dev = [
    "pytest>=8.1.0",
]

[tool.pytest.ini_options]
markers = [
    "network: tests that require internet access (S3, STAC API)",
]
